--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 language: node_js
 node_js:
-  - 10.16.0
+- 10.16.0
 branches:
   only:
   - production
 cache:
   npm: true
-
 before_install:
-
+- openssl aes-256-cbc -K $encrypted_e05bada9bc85_key -iv $encrypted_e05bada9bc85_iv
+  -in secret.json.enc -out secret.json -d
 install:
-  - npm i
-
+- npm i
 deploy:
   provider: script
   skip_cleanup: true
