--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ branches:
 cache:
   npm: true
 before_install:
-
-
+- openssl aes-256-cbc -K $encrypted_d39d4435ff34_key -iv $encrypted_d39d4435ff34_iv
+  -in secret.json.enc -out secret.json -d
 install:
 - npm i
 deploy:
