--- a/configuration/routes/021-approval-email-send.json
+++ b/configuration/routes/021-approval-email-send.json
@@ -1,6 +1,6 @@
 {
-  "name": "verify-email-send",
-  "pattern": "/verify-email-send",
+  "name": "approval-email-send",
+  "pattern": "/approval-email-send",
   "debug": true,
   "acceptedVerbs": "POST",
   "defaultParams": {
@@ -36,7 +36,7 @@
       "config": {
         "output": "data",
         "parseJson": true,
-        "template": ">context.metaData.handlebars.templates.account_verify-email"
+        "template": ">context.metaData.handlebars.templates.account_email-approval"
       }
     },
     {
