--- a/configuration/routes/020-approval.json
+++ b/configuration/routes/020-approval.json
@@ -52,14 +52,14 @@
       }
     },
     {
-      "name": "validateUser",
+      "name": "userApproval",
       "taskModule": "salesforceApex",
       "renderer": "handlebars",
       "config": {
         "connection": "scvoAlexSandbox",
         "output": "data",
         "method": "POST",
-        "body": ">context.metaData.handlebars.templates.account_user-validate-body",
+        "body": ">context.metaData.handlebars.templates.account_approval-body",
         "apexClassPath": "/SaltireUserValidate/"
       }
     },
