Fix to a couple of bugs caused by the rename of verification to approval

--- a/configuration/data/email-send-settings.json
+++ b/configuration/data/email-send-settings.json
@@ -8,7 +8,7 @@
     "bodyPartial": "emails_parental_approval_body",
     "metaData": {}
   },
-  "admin-approval": {
+  "tsi-approval": {
     "mailgunConnection": "mg_saltireawards",
     "from": "Saltire Awards <hello@saltireawards.org.uk>",
     "replyTo": "Saltire Awards <hello@saltireawards.org.uk>",
