--- a/configuration/routes/020-approval.json
+++ b/configuration/routes/020-approval.json
@@ -79,7 +79,7 @@
             "layout": ">context.metaData.handlebars.layouts.default",
             "parts": {
               "head": ">context.metaData.handlebars.templates.pages_head-tags",
-              "body": ">context.metaData.handlebars.templates.pages_approval-pass",
+              "body": ">context.metaData.handlebars.templates.account_approval-pass",
               "foot": ""
             },
             "contentType": "text/html"
