--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "pako": "^1.0.6",
     "request-promise-native": "^1.0.5",
     "simplemde": "^1.11.2",
+    "spectre.css": "^0.5.8",
     "string": "^3.3.3",
     "typeahead.js": "https://github.com/twitter/typeahead.js",
     "whatwg-fetch": "^3.0.0"
