--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "npm run clear-build && LIBRARY=SaltireAwards webpack --env=prod",
     "publish": "npm run build && GOOGLE_APPLICATION_CREDENTIALS=\"secret.json\" SITE=saltireawards node  ./node_modules/@scvo/common/publish.js",
     "clear-build": "rm -rf build/**",
+    "compile-sa-email-templates": "node_modules/mjml/bin/mjml configuration/emails/*mjml -o configuration/partials/emails/",
     "deploy": "./node_modules/@scvo/common/deploy.sh"
   },
   "repository": {
