--- a/configuration/routes/021-approval-email-send.json
+++ b/configuration/routes/021-approval-email-send.json
@@ -41,11 +41,10 @@
     },
     {
       "name": "destination",
-      "taskModule": "render",
-      "renderer": "handlebars",
+      "taskModule": "redirect",
       "config": {
-        "output": "body",
-        "template": "{\"success\": true }"
+        "location": "/approval-required",
+        "statusCode": 302
       }
     }
   ]
