removed some ajax (and some useful error messaging) from approval process

--- a/configuration/routes/021-approval-email-send.json
+++ b/configuration/routes/021-approval-email-send.json
@@ -2,7 +2,7 @@
   "name": "approval-email-send",
   "pattern": "/approval-email-send",
   "debug": true,
-  "acceptedVerbs": "POST",
+  "acceptedVerbs": "POST,GET",
   "defaultParams": {
     "context": "results"
   },
