--- a/configuration/routes/018-approval-email-send.json
+++ b/configuration/routes/018-approval-email-send.json
@@ -36,7 +36,7 @@
       "config": {
         "output": "data",
         "parseJson": true,
-        "template": ">context.metaData.handlebars.templates.account_auth_approval-email"
+        "template": ">context.metaData.handlebars.templates.account_email_approval"
       }
     },
     {
