Added dynamic loading of configs, tasks, and partials for frontend

--- a/configuration/config.inc.json
+++ b/configuration/config.inc.json
@@ -43,6 +43,17 @@
       },
       "queries": {
         "{$./queries/**/*.*}": ""
+      },
+      "frontend": {
+        "tasks": {
+          "{$./frontend/tasks/**/*.*}": ""
+        },
+        "configs": {
+          "{$./frontend/configs/**/*.*}": ""
+        },
+        "partials": {
+          "{$./frontend/partials/**/*.*}": ""
+        }
       }
     },
     "commonTasks": "{:./data/common-tasks.json}"
