--- a/configuration/routes/020-approval.json
+++ b/configuration/routes/020-approval.json
@@ -2,6 +2,7 @@
   "name": "approval",
   "pattern": "/user-approval",
   "debug": true,
+  "errorRoute": "five_hundred",
   "tasks": [
     "context.metaData.commonTasks.authNotRequired",
     {
