--- a/configuration/routes/021-approval-fail.json
+++ b/configuration/routes/021-approval-fail.json
@@ -2,6 +2,7 @@
   "name": "approval-fail",
   "pattern": "approval-fail",
   "debug": true,
+  "errorRoute": "five_hundred",
   "tasks": [
     "context.metaData.commonTasks.authNotRequired",
     {
