more errors work

--- a/configuration/data/common-tasks.json
+++ b/configuration/data/common-tasks.json
@@ -110,7 +110,7 @@
   "renderer": "handlebars",
   "config": {
     "output": "data",
-    "template": ">context.metaData.handlebars.templates.task_hours-code-verify"
+    "template": ">context.metaData.handlebars.templates.volunteering_hours-code-verify"
     }
   },
   "handleHoursVerifyFail" :     {
