--- a/configuration/config.inc.json
+++ b/configuration/config.inc.json
@@ -23,6 +23,16 @@
       "technical": "webhelpdesk@scvo.org.uk"
     },
     "emailSendSettings": "{:./data/email-send-settings.json}",
+    "theme": {
+      "primary": "#009DDA",
+      "secondary": "#253887",
+      "challenge": "#008DDE",
+      "approach": "#3BAA34",
+      "ascent": "#F05B23",
+      "summit": "#514680",
+      "footer": "#591669",
+      "copyright": "#e7eaec"
+    },
     "menus": "{:./data/menus.json}",
     "accountInfoValidation": "{:./data/account-info-validation.json}",
     "taskInfoValidation": "{:./data/task-info-validation.json}",
