trying to fix a bug with frontend partials

--- a/configuration/config.inc.json
+++ b/configuration/config.inc.json
@@ -63,7 +63,7 @@
           "{$./frontend/configs/**/*.*}": ""
         },
         "partials": {
-          "{$./frontend/partials/**/*.*}": ""
+          "{$./frontend/partials/**/*.*}": "includeRelativePath=false&regexExpression=(-)&regexOptions=gi&regexReplace=_"
         }
       }
     },
