fixes for tablet layout

--- a/configuration/config.inc.json
+++ b/configuration/config.inc.json
@@ -14,6 +14,7 @@
     "assetsBase": "https://storage.googleapis.com/scvo-assets/test/saltireawards/",
     "title": "Saltire Awards",
     "fullTitle": "The Saltire Awards",
+    "tagline": "Celebrating youth volunteering in Scotland",
     "certificateName": "Saltire Award",
     "accountName": "My Saltire",
     "url": "https://test.saltireawards.scot",
