--- a/configuration/routes/020-approval.json
+++ b/configuration/routes/020-approval.json
@@ -65,6 +65,14 @@
       }
     },
     {
+      "name": "flushOtherCache",
+      "taskModule": "cacheFlush",
+      "renderer": "handlebars",
+      "config": {
+        "partition": "saltire-profiles-{{@root.request.params.query.id}}"
+      }
+    },
+    {
       "name": "sendEmail",
       "taskModule": "mailgun",
       "renderer": "handlebars",
