--- a/configuration/data/common-tasks.json
+++ b/configuration/data/common-tasks.json
@@ -44,7 +44,7 @@
     "taskModule": "salesforceApex",
     "renderer": "handlebars",
     "cache": {
-      "keyProperties": ["'getAccountInfo'"],
+      "keyProperties": ["$accountInfo"],
       "partition": "saltire-profiles-{{data.auth.uid}}",
       "ttl": 3600
     },
@@ -59,6 +59,11 @@
     "name": "tasksInfo",
     "taskModule": "salesforceApex",
     "renderer": "handlebars",
+    "cache": {
+      "keyProperties": ["$tasksInfo"],
+      "partition": "saltire-profiles-{{data.auth.uid}}",
+      "ttl": 3600
+    },
     "config": {
       "connection": "scvoAlexSandbox",
       "output": "data",
@@ -70,6 +75,11 @@
     "name": "hoursInfo",
     "taskModule": "salesforceApex",
     "renderer": "handlebars",
+    "cache": {
+      "keyProperties": ["$hoursInfo"],
+      "partition": "saltire-profiles-{{data.auth.uid}}",
+      "ttl": 3600
+    },
     "config": {
       "connection": "scvoAlexSandbox",
       "output": "data",
@@ -81,6 +91,11 @@
     "name": "tasksInfoUnverified",
     "taskModule": "salesforceApex",
     "renderer": "handlebars",
+    "cache": {
+      "keyProperties": ["$tasksInfoUnverified"],
+      "partition": "saltire-profiles-{{data.auth.uid}}",
+      "ttl": 3600
+    },
     "config": {
       "connection": "scvoAlexSandbox",
       "output": "data",
