experimenting with common tasks

--- a/configuration/data/common-tasks.json
+++ b/configuration/data/common-tasks.json
@@ -118,9 +118,7 @@
 		"config": {
 			"appName": "saltireawards",
 			"pathTemplate": "/{{default data.auth.uid 'no-such-write-profile'}}/verify-hours/",
-			"defaultData": {
-				"test": true
-			}
+			"defaultData": {}
 		}
 	},
 	"verifyHoursInfoExternal": {
