--- a/configuration/data/common-tasks.json
+++ b/configuration/data/common-tasks.json
@@ -117,8 +117,8 @@
 		"renderer": "handlebars",
 		"config": {
 			"appName": "saltireawards",
-			"pathTemplate": "/{{default data.auth.uid 'no-such-write-profile'}}/verify-hours/",
-			"defaultData": []
+			"pathTemplate": "/{{default @root.data.auth.uid 'no-such-write-profile'}}/verify-hours/",
+			"defaultData": "false"
 		}
 	},
 	"verifyHoursInfoExternal": {
@@ -128,7 +128,7 @@
 		"config": {
 			"appName": "saltireawards",
 			"pathTemplate": "/{{default @root.request.params.query.u 'no-such-write-profile'}}/verify-hours/",
-			"defaultData": []
+			"defaultData": "false"
 		}
 	},
 	"getTasksInfoUnverifiedExternal": {
