--- a/configuration/routes/019-approval-required.json
+++ b/configuration/routes/019-approval-required.json
@@ -54,7 +54,7 @@
           "default": {
             "layout": ">context.metaData.handlebars.layouts.default",
             "parts": {
-              "head": ">context.metaData.handlebars.templates.page_head-tags",
+              "head": ">context.metaData.handlebars.templates.pages_head-tags",
               "body": ">context.metaData.handlebars.templates.account_auth_approval-required",
               "sidebar": ">context.metaData.handlebars.templates.account_sidebar"
             },
