user approval fixed, and working

--- a/configuration/routes/024-approval.json
+++ b/configuration/routes/024-approval.json
@@ -61,7 +61,7 @@
         "output": "data",
         "method": "POST",
         "body": ">context.metaData.handlebars.templates.account_auth_approval-body",
-        "apexClassPath": "/SaltireUserValidate/"
+        "apexClassPath": "/SaltireUserApprove/"
       }
     },
     {
