certificate bugfix and image colours update

--- a/configuration/config.inc.json
+++ b/configuration/config.inc.json
@@ -16,6 +16,8 @@
     "fullTitle": "The Saltire Awards",
     "tagline": "Celebrating youth volunteering in Scotland",
     "certificateName": "Saltire Award",
+    "certificateSignatureName": "John Swinney",
+    "certificateSignatureTitle": "Cabinet Secretary for Education and Skills",
     "accountName": "My Saltire",
     "url": "https://test.saltireawards.scot",
     "twitter": "saltireawards",
@@ -26,8 +28,8 @@
     },
     "emailSendSettings": "{:./data/email-settings.json}",
     "theme": {
-      "primary": "#009DDA",
-      "secondary": "#253887",
+      "primary": "#008EDF",
+      "secondary": "#1B2875",
       "challenge": "#008DDE",
       "approach": "#3BAA34",
       "ascent": "#F05B23",
